<?php
declare(strict_types=1);

namespace MVC\Views;

class UserMdView extends MdView {}